      - PlayerMobile.m_VisList
      - PlayerMobile.m_PermaFlags
      - PlayerMobile.m_JusticeProtectors
      - PlayerMobile.m_AntiMacroTable
      - PlayerMobile.m_Aggressors
      - PlayerMobile.m_Aggressed
      - BaseCreature.m_Owners
      - GenericBuyInfo.Name
      - GenericBuyInfo.DisplayCache.m_Table
      - GenericBuyInfo.DisplayCache.m_Mobiles
      - GenericSellInfo.m_Table
    - use XmlReader instead of XmlDocument.Load() to parse the accounts file
    - use DateTime.Now cache
  * moved into separate script libraries:
    - Engines.MyRunUO
    - Engines.Reports
    - Engines.RemoteAdmin
  * upgraded log4net to 1.2.10

 --

sunuo (0.3.1) unstable; urgency=low

  * optimizations in the serialization code
    - cache position in BinaryFileWriter
    - sealed the serialization classes
    - enlarged BinaryFileWriter's buffer to 32kB
  * removed BinaryFileWriter.UnderlyingStream
  * BinaryFileWriter.Flush() is private
  * Mobile: better SkillMod==null handling

 -- Max Kellermann <max@duempel.org>  Wed,  8 Feb 2006 23:26:45 +0100

sunuo (0.3.0) unstable; urgency=low

  * distribute log4net.dll
  * removed the --logfile option
  * use log4net in exception handlers and more
  * load legacy scripts from local/src and local/lib if present
  * moved main BaseDirectory declaration to Config
  * configure config file and base directory on the command line
  * command line arguments are no longer case insensitive
  * understand "--debug", "--profile", "--service"
  * added directories to Config:
    - ConfigDirectory = BaseDirectory + "/Data"
    - SaveDirectory = BaseDirectory + "/Saves"
    - BackupDirectory = BaseDirectory + "/Backup"
  * moved bootstrapping code to Bootstrap.cs
  * change to base directory
  * GameServerListConfig.GameServers returns IList
  * removed zlib workaround which should be in scripts
  * MultiConOut is a dummy now that log4net is being used
  * disable console in service mode
  * added Config.Features
    - disable-context-menus